# tool-tool

./: .gitignore  .gitlab-ci.yml  .tool-tool.v1.yaml  Cargo.toml  README.md
.github/workflows/: compile.yml
infra/ci/: ci.sh
integration-tests/: Cargo.toml
integration-tests/src/: integration_tests.rs  lib.rs
integration-tests/src/snapshots/: integration_tests__integration_tests__basic_operation-2.snap  integration_tests__integration_tests__basic_operation-3.snap  integration_tests__integration_tests__basic_operation.snap  integration_tests__integration_tests__coreutils-10.snap  integration_tests__integration_tests__coreutils-11.snap  integration_tests__integration_tests__coreutils-12.snap  integration_tests__integration_tests__coreutils-13.snap  integration_tests__integration_tests__coreutils-14.snap  integration_tests__integration_tests__coreutils-15.snap  integration_tests__integration_tests__coreutils-16.snap  integration_tests__integration_tests__coreutils-17.snap  integration_tests__integration_tests__coreutils-2.snap  integration_tests__integration_tests__coreutils-3.snap  integration_tests__integration_tests__coreutils-4.snap  integration_tests__integration_tests__coreutils-5.snap  integration_tests__integration_tests__coreutils-6.snap  integration_tests__integration_tests__coreutils-7.snap  integration_tests__integration_tests__coreutils-8.snap  integration_tests__integration_tests__coreutils-9.snap  integration_tests__integration_tests__coreutils.snap  integration_tests__integration_tests__invalid_url-2.snap  integration_tests__integration_tests__invalid_url.snap  integration_tests__tests__basic_operation-2.snap  (+8 more)
integration-tests/test-configurations/: basic.yaml  coreutils.yaml  invalid_url.yaml
scripts/: build_release.sh
shim/: Cargo.toml
shim/src/: main.rs  shim.rs
src/: args.rs  cache.rs  config.rs  download.rs  help.rs  invocation.rs  main.rs  platform.rs  template.rs  util.rs
src/platform/: linux.rs  windows.rs
src/snapshots/: tt__config__tests__simple.snap  tt__config__tests__with_commands.snap  tt__help__tests__help_configured.snap  tt__help__tests__help_empty.snap
