[package]
name = "tool-tool"
version = "0.1.0"
authors = ["Manuel Woelker <github@manuel.woelker.org>"]
license = "Apache-2.0"
repository = "https://gitlab.com/manuelwoelker/tool-tool"
edition = "2018"
description = "🛠 A light-weight meta-tool to version and install tool dependencies for your software projects"

[dependencies]
anyhow = "1.0.31"
http_req = "0.6.1"
serde = { version = "1.0.111", features = ["derive"] }
serde_yaml = "0.8.12"
dirs = "2.0.2"
zip = { version = "0.5", default-features = false, features = ["deflate"] }
atomicwrites = "0.2.5"
flate2 = "1.0.14"
tar = "0.4.28"

[profile.release]
debug = true